working code with hf 4.3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 jsonlines
--e git://github.com/ibeltagy/allennlp@fp16_and_others#egg=allennlp
+-e git+https://github.com/ibeltagy/allennlp@fp16_and_others#egg=allennlp
